# employee_database

./: CMakeLists.txt  README.md
gui/: window.cpp  window.hpp
src/: main.cpp
src/core/: database.cpp  database.hpp  info.hpp
src/core/sorting/: sorting.hpp
